--- a/desktop/src/kibana/components/filter_bar/filter_bar.less
+++ b/desktop/src/kibana/components/filter_bar/filter_bar.less
@@ -33,7 +33,7 @@ filter-bar .bar {
     min-width: 110px;
 
     font-size: @font-size-small;
-    background-color: @gray-dark;
+    background-color: @action-add;
     color: #fff;
     margin-right: 4px;
     margin-bottom: 4px;
@@ -74,7 +74,7 @@ filter-bar .bar {
     }
 
     &.negate {
-      background-color: #D18282;
+      background-color: @action-remove;
     }
 
     a {
@@ -82,7 +82,7 @@ filter-bar .bar {
     }
 
     &.disabled {
-      opacity: 0.8;
+      opacity: 0.6;
       background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255,255,255,.3) 10px, rgba(255,255,255,.3) 20px);
     }
 
