--- a/desktop/src/kibana/styles/_variables.less
+++ b/desktop/src/kibana/styles/_variables.less
@@ -17,3 +17,6 @@
 @sidebar-active-bg: @component-active-bg;
 @sidebar-active-hover-bg: @component-active-bg;
 @sidebar-active-hover-color: @component-active-color;
+
+@action-add: @btn-default-bg;
+@action-remove: desaturate(@btn-danger-bg, 30%);
