Change filters to be green instead of grey

--- a/desktop/src/kibana/styles/_variables.less
+++ b/desktop/src/kibana/styles/_variables.less
@@ -18,5 +18,5 @@
 @sidebar-active-hover-bg: @component-active-bg;
 @sidebar-active-hover-color: @component-active-color;
 
-@action-add: @btn-default-bg;
+@action-add: desaturate(@btn-success-bg, 30%);
 @action-remove: desaturate(@btn-danger-bg, 30%);
