--- a/desktop/src/kibana/components/filter_bar/filter_bar.html
+++ b/desktop/src/kibana/components/filter_bar/filter_bar.html
@@ -1,12 +1,18 @@
 <div class="bar" ng-show="filters.length">
   <div class="filter" ng-class="{ negate: filter.negate, disabled: filter.disabled }" ng-repeat="filter in filters">
     <div class="filter-description">
+      <!--<span><i class="fa" ng-class="{'fa-plus': !filter.negate, 'fa-minus': filter.negate}"></i></span>-->
       <span>{{ filter.key }}:</span>
       <span>"{{ filter.value }}"</span>
     </div>
     <div class="filter-actions">
-      <a class="filter-toggle" ng-click="toggleFilter(filter)"><span ng-show="filter.disabled">enable</span><span ng-hide="filter.disabled">disable</span></a>
-      <a class="filter-remove" ng-click="removeFilter(filter)">remove</a>
+      <a class="filter-toggle" ng-click="toggleFilter(filter)">
+        <span ng-show="filter.disabled">enable</span>
+        <span ng-hide="filter.disabled">disable</span>
+      </a>
+      <a class="filter-remove" ng-click="removeFilter(filter)">
+        remove
+      </a>
     </div>
   </div>
   <div class="filter-link">
