use chosen for the multi select

--- a/desktop/src/kibana/components/agg_types/controls/regular_expression.html
+++ b/desktop/src/kibana/components/agg_types/controls/regular_expression.html
@@ -12,6 +12,9 @@
     </span>
     <select
       multiple
+      chosen
+      width="'100%'"
+      data-placeholder="Flags"
       ng-model="params[aggParam.name].flags"
       ng-options="label for label in aggParam.flags">
     </select>
