use bootstrap-chosen to fix styles use custom chosen styles to fix them further

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -13,6 +13,9 @@
 // bootstrap modifications
 @import "./theme/_theme.less";
 
+// chosen
+@import "./_chosen.less";
+
 // call outs
 @import "./_callout.less";
 
