change the link to the flags docs

--- a/desktop/src/kibana/apps/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/styles/editor.less
@@ -164,18 +164,11 @@
 
       .regex .flags {
         .docs {
-          float: right;
-          margin: @vis-editor-agg-editor-spacing;
-
-          a {
-            color: @gray-lighter;
-          }
+          text-align: right;
         }
 
-        label {
-          margin: 0;
-          padding: 0 @vis-editor-agg-editor-spacing;
-          font-weight: normal;
+        a {
+          color: @link-color;
         }
       }
     }
