--- a/desktop/src/kibana/components/agg_types/controls/regular_expression.html
+++ b/desktop/src/kibana/components/agg_types/controls/regular_expression.html
@@ -6,10 +6,10 @@
     ng-model="params[aggParam.name].pattern"
   >
   <div class="flags">
-    <span class="docs label label-info">
-      <a href="http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html#field_detail"
-        target="_blank">regex flags</a>
-    </span>
+    <div class="docs">
+      <small><a href="http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html#field_detail"
+        target="_blank">Regex Flags</a></small>
+    </div>
     <select
       multiple
       chosen
