Add copy-to-clipboard for embed and share links

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -132,7 +132,7 @@ notifications {
   margin-bottom: 0px!important;
 }
 
-[ng-click], [href], [confirm-click] {
+[ng-click], [clip-copy], [href], [confirm-click] {
   cursor: pointer;
 }
 
