--- a/desktop/src/kibana/components/vis_types/tooltips/histogram.html
+++ b/desktop/src/kibana/components/vis_types/tooltips/histogram.html
@@ -2,7 +2,10 @@
   <tbody>
     <tr ng-repeat="detail in details" >
       <td><b>{{detail.label}}</b></td>
-      <td>{{detail.value}}</td>
+      <td>
+          {{detail.value}}
+          <span ng-if="detail.percent"> ({{detail.percent}})</span>
+      </td>
     </tr>
   </tbody>
 </table>
