added mapbox, tilemap vis type, circle markers

--- a/desktop/src/kibana/components/vislib/styles/main.less
+++ b/desktop/src/kibana/components/vislib/styles/main.less
@@ -408,3 +408,8 @@ p.rows-label, p.columns-label {
 .x.axis path {
   display: none;
 }
+
+.tilemap {
+  margin: 0 0 6px 0;
+  border: 1px solid #ddd;
+}
