Add copy-to-clipboard for share and spy

--- a/desktop/src/kibana/components/visualize/spy/_req_resp_stats.html
+++ b/desktop/src/kibana/components/visualize/spy/_req_resp_stats.html
@@ -3,12 +3,18 @@
 </div>
 
 <div ng-show="spyMode.name === 'request'">
-  <a href="" clip-copy="getReq()">Copy</a>
+  <label>
+    Elasticsearch request body &nbsp
+    <kbn-clipboard copy="history.req | json"></kbn-clipboard>
+  </label>
   <pre>{{history.req | json}}</pre>
 </div>
 
 <div ng-show="spyMode.name === 'response'">
-  <a clip-copy="history.resp">Copy</a>
+  <label>
+    Elasticsearch response body &nbsp
+    <kbn-clipboard copy="history.resp | json"></kbn-clipboard>
+  </label>
   <pre>{{history.resp | json}}</pre>
 </div>
 
@@ -19,4 +25,4 @@
       <td>{{pair[1]}}</td>
     </tr>
   </table>
-</div>
+</div
