--- a/desktop/src/kibana/apps/dashboard/partials/share.html
+++ b/desktop/src/kibana/apps/dashboard/partials/share.html
@@ -2,14 +2,14 @@
 
   <p>
     <div class="input-group">
-      <label>Embed this dashboard. <a tooltip="Copy to clipboard"><i clip-copy="opts.shareData().embed" class="fa fa-clipboard"></i></a> <small>Add to your html source. Note all clients must still be able to access kibana</small></label>
+      <label>Embed this dashboard. <kbn-clipboard copy="opts.shareData().embed"></kbn-clipboard> <small>Add to your html source. Note all clients must still be able to access kibana</small></label>
       <div class="form-control" disabled>{{opts.shareData().embed}}</div>
     </div>
   </p>
 
   <p>
     <div class="input-group">
-      <label>Share a link <a tooltip="Copy to clipboard"><i clip-copy="opts.shareData().link" class="fa fa-clipboard"></i></a></label>
+      <label>Share a link <kbn-clipboard copy="opts.shareData().link"></kbn-clipboard></i></a></label>
     	<div class="form-control" disabled>{{opts.shareData().link}}</div>
     </div>
   </p>
