initial workings of the json input

--- a/desktop/src/kibana/components/agg_types/controls/raw_json.html
+++ b/desktop/src/kibana/components/agg_types/controls/raw_json.html
@@ -1,4 +1,9 @@
 <div class="form-group regex">
   <label>JSON Input</label>
-  <p>coming soon</p>
+  <p>
+    <textarea
+      ng-model="params.json">
+    </textarea>
+
+  </p>
 </div>
