--- a/desktop/src/kibana/styles/_chosen.less
+++ b/desktop/src/kibana/styles/_chosen.less
@@ -21,7 +21,8 @@
 .chosen-container-multi {
   .chosen-choices {
     .search-field {
-      margin-top: 6px;
+      margin-top: 4px;
+      margin-bottom: 2px;
       margin-left: 6px;
 
       input {
