remove regex class, fix praam name

--- a/desktop/src/kibana/components/agg_types/controls/value_script.html
+++ b/desktop/src/kibana/components/agg_types/controls/value_script.html
@@ -1,6 +1,6 @@
-<div class="form-group regex">
+<div class="form-group">
   <label>Value Script</label>
   <div>
-    <input type="text" ng-model="params.script" class="form-control">
+    <input type="text" ng-model="params.value_script" class="form-control">
   </div>
 </div>
