--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -94,17 +94,37 @@ visualize-spy {
   }
 
   // this is the default, double-arrow sort that is just a hint to the user that they can sort
-  .visualize-table th i.fa-sort {
-    color: @gray-light;
-  }
+  .visualize-table {
+    .display(flex);
+    .flex(1, 1, auto);
+    .flex-direction(column);
 
-  .visualize-table-right {
-    text-align: right;
-  }
+    &-paginated-table {
+      .flex(1, 1, auto);
+      overflow: auto;
 
-  .visualize-table-controls {
-    padding: 0 5px;
-    text-align: right;
+      th i.fa-sort {
+        color: @gray-light;
+      }
+
+      .visualize-table-right,
+      td.numeric-value {
+        text-align: right;
+      }
+    }
+
+    &-controls {
+      .flex(0, 0, auto);
+      .display(flex);
+      .align-items(center);
+      margin: 10px 5px;
+
+      > paginate-controls {
+        .flex(1, 0, auto);
+        margin: 0;
+        padding: 0;
+      }
+    }
   }
 
   .visualize-csv-options {
