--- a/desktop/src/kibana/partials/paginate_controls.html
+++ b/desktop/src/kibana/partials/paginate_controls.html
@@ -1,23 +1,30 @@
 <ul class="pagination pagination-sm">
   <li ng-class="{disabled: page.first}">
-    <a ng-click="goToPage(page.prev)">«</a>
+    <a ng-click="paginate.goToPage(page.prev)">«</a>
   </li>
 
   <li ng-if="!otherPages.containsFirst">
-    <a ng-click="goToPage(1)">1...</a>
+    <a ng-click="paginate.goToPage(1)">1...</a>
   </li>
 
   <li
     ng-repeat="other in otherPages"
     ng-class="{ active: other.number === page.number }">
-    <a ng-click="goToPage(other)">{{other.number}}</a>
+    <a ng-click="paginate.goToPage(other)">{{other.number}}</a>
   </li>
 
   <li ng-if="!otherPages.containsLast">
-    <a ng-click="goToPage(page.count)">...{{page.count}}</a>
+    <a ng-click="paginate.goToPage(page.count)">...{{page.count}}</a>
   </li>
 
   <li ng-class="{disabled: page.last}">
-    <a ng-click="goToPage(page.next)">»</a>
+    <a ng-click="paginate.goToPage(page.next)">»</a>
   </li>
 </ul>
+
+<form class="form-inline pagination-size">
+  <div class="form-group">
+    <label>Page Size</label>
+    <input type="number" ng-model="paginate.perPage">
+  </div>
+</form>
