[vis_debug_spy] Renamed to 'vis debug spy'

--- a/desktop/src/kibana/components/clipboard/clipboard.html
+++ b/desktop/src/kibana/components/clipboard/clipboard.html
@@ -3,7 +3,7 @@
     tooltip-placement="{{tipPlacement}}"
     tooltip-animation="false"
     tooltip-popup-delay="0"
-    tooltip-append-to-body="false">
+    tooltip-append-to-body="true">
     <i class="fa" ng-class="icon" clip-copy="copyText"></i>
   </a>
 </span>
