[aggTable] create using the guts of the table spy

--- a/desktop/src/kibana/components/visualize/spy/_table.html
+++ b/desktop/src/kibana/components/visualize/spy/_table.html
@@ -1,32 +1,1 @@
-<paginate list="rows" per-page="perPage" class="visualize-table">
-  <div class="visualize-table-paginated-table">
-    <table class="table table-condensed">
-      <thead>
-        <tr bindonce>
-          <th
-            ng-repeat="col in columns"
-            ng-click="cycleSort(col)"
-            ng-class="getColumnClass(col, $first, $last)">
-            <span bo-text="colTitle(col)"></span>
-            <i
-              class="fa"
-              ng-class="{
-                'fa-sort-asc': sort.col === col && sort.asc === true,
-                'fa-sort-desc': sort.col === col && sort.asc === false,
-                'fa-sort': !sort || sort.col !== col
-              }">
-            </i>
-          </th>
-        </tr>
-      </thead>
-      <tbody kbn-rows="page" kbn-rows-min="paginate.perPage"></tbody>
-    </table>
-  </div>
-
-  <div class="visualize-table-controls">
-    <a class="small" ng-click="exportAsCsv()">
-      Export <i class="fa fa-download"></i>
-    </a>
-    <paginate-controls></paginate-controls>
-  </div>
-</paginate>
+<kbn-agg-table rows="rows" columns="columns" per-page="perPage"></kbn-agg-table>
