--- a/desktop/src/kibana/components/typeahead/typeahead.less
+++ b/desktop/src/kibana/components/typeahead/typeahead.less
@@ -1,3 +1,7 @@
+@import (reference) "../../styles/_bootstrap.less";
+@import (reference) "../../styles/theme/_theme.less";
+@import (reference) "../../styles/_variables.less";
+
 .typeahead {
   position: relative;
 
