make query input error style universal

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -32,6 +32,7 @@
 @import "./_pagination.less";
 
 // custom control style
+@import "./_input.less";
 @import "./_navbar.less";
 @import "./_sidebar.less";
 @import "./_truncate.less";
