Tweak view for consistency

--- a/desktop/src/kibana/styles/_chosen.less
+++ b/desktop/src/kibana/styles/_chosen.less
@@ -21,12 +21,18 @@
 .chosen-container-multi {
   .chosen-choices {
     .search-field {
-      margin-top: 4px;
-      margin-bottom: 2px;
       margin-left: 6px;
 
       input {
         padding: 0;
+      }
+    }
+
+    .search-choice {
+      padding: 0 20px 0 0;
+
+      .search-choice-close {
+        top: 2px;
       }
     }
   }
