--- a/desktop/src/kibana/components/agg_types/controls/regular_expression.html
+++ b/desktop/src/kibana/components/agg_types/controls/regular_expression.html
@@ -1,20 +1,23 @@
 <div class="form-group regex">
-  <label>{{ aggParam.name | label }}</label>
+  <label>{{ aggParam.name | label }} Pattern</label>
   <input
     type="text"
     class="form-control"
     ng-model="params[aggParam.name].pattern"
   >
+</div>
+<div class="form-group regex">
   <div class="flags">
-    <div class="docs">
-      <small><a href="http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html#field_detail"
-        target="_blank">Regex Flags</a></small>
-    </div>
+    <label>
+      {{ aggParam.name | label }} Pattern Flags
+      <small>(<a href="http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html#field_detail"
+        target="_blank">reference</a>)</small>
+    </label>
     <select
       multiple
       chosen
       width="'100%'"
-      data-placeholder="Flags"
+      data-placeholder="&nbsp"
       ng-model="params[aggParam.name].flags"
       ng-options="label for label in aggParam.flags">
     </select>
