use validate_json on json agg input, add invalid style on textareas

--- a/desktop/src/kibana/components/agg_types/controls/raw_json.html
+++ b/desktop/src/kibana/components/agg_types/controls/raw_json.html
@@ -2,8 +2,10 @@
   <label>JSON Input</label>
   <p>
     <textarea
-      ng-model="params.json">
-    </textarea>
-
+      type="text"
+      class="form-control"
+      ng-model="params.json"
+      validate-json
+      ></textarea>
   </p>
 </div>
