--- a/desktop/src/kibana/components/visualize/spy/_table.html
+++ b/desktop/src/kibana/components/visualize/spy/_table.html
@@ -1,1 +1,1 @@
-<kbn-agg-table rows="rows" columns="columns" per-page="perPage"></kbn-agg-table>
+<kbn-agg-table table="table" per-page="perPage"></kbn-agg-table>
