--- a/desktop/src/kibana/plugins/discover/styles/main.less
+++ b/desktop/src/kibana/plugins/discover/styles/main.less
@@ -64,6 +64,11 @@
   padding-left: 0px !important;
   padding-right: 0px !important;
 
+  tbody {
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size: 10pt;
+  }
+
   &-timefield {
     white-space: nowrap;
   }
