--- a/desktop/src/kibana/components/agg_table/agg_table.html
+++ b/desktop/src/kibana/components/agg_table/agg_table.html
@@ -2,7 +2,7 @@
   ng-if="!group"
 
   list="formattedRows"
-  per-page="getPerPage()"
+  per-page="aggTable.getPerPage()"
 
   class="agg-table">
   <div class="visualize-table-paginated-table">
@@ -25,7 +25,7 @@
           </th>
         </tr>
       </thead>
-      <tbody kbn-rows="page" kbn-rows-min="getPerPage()"></tbody>
+      <tbody kbn-rows="page" kbn-rows-min="aggTable.getPerPage()"></tbody>
     </table>
   </div>
 
