[aggTable] fix some class names

--- a/desktop/src/kibana/components/agg_table/agg_table.html
+++ b/desktop/src/kibana/components/agg_table/agg_table.html
@@ -5,7 +5,7 @@
   per-page="aggTable.getPerPage()"
 
   class="agg-table">
-  <div class="visualize-table-paginated-table">
+  <div class="agg-table-paginated">
     <table class="table table-condensed">
       <thead>
         <tr bindonce>
@@ -29,7 +29,7 @@
     </table>
   </div>
 
-  <div class="visualize-table-controls">
+  <div class="agg-table-controls">
     <a class="small" ng-click="aggTable.exportAsCsv()">
       Export <i class="fa fa-download"></i>
     </a>
