--- a/desktop/src/kibana/components/agg_table/agg_table_group.html
+++ b/desktop/src/kibana/components/agg_table/agg_table_group.html
@@ -1,27 +1,35 @@
-<table ng-if="rows" class="table">
-  <tr ng-repeat-start="table in rows">
-    <th ng-if="table.title">
-      <span class="agg-table-table-header">{{ table.title }}</span>
-    </th>
-  </tr>
-  <tr ng-repeat-end>
-    <td>
-      <kbn-agg-table-group ng-if="table.tables" group="table"></kbn-agg-table-group>
-      <kbn-agg-table ng-if="table.rows" table="table"></kbn-agg-table>
-    </td>
-  </tr>
+<table ng-if="rows" class="table agg-table-group">
+  <thead ng-repeat-start="table in rows">
+    <tr>
+      <th ng-if="table.title">
+        <span class="agg-table-table-header">{{ table.title }}</span>
+      </th>
+    </tr>
+  </thead>
+  <tbody ng-repeat-end>
+    <tr>
+      <td>
+        <kbn-agg-table-group ng-if="table.tables" group="table"></kbn-agg-table-group>
+        <kbn-agg-table ng-if="table.rows" table="table"></kbn-agg-table>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
-<table ng-if="columns" class="table">
-  <tr>
-    <th ng-repeat="table in columns" ng-if="table.title">
-      <span class="agg-table-table-header">{{ table.title }}</span>
-    </th>
-  </tr>
-  <tr>
-    <td ng-repeat="table in columns">
-      <kbn-agg-table-group ng-if="table.tables" group="table"></kbn-agg-table-group>
-      <kbn-agg-table ng-if="table.rows" table="table"></kbn-agg-table>
-    </td>
-  </tr>
+<table ng-if="columns" class="table agg-table-group">
+  <thead>
+    <tr>
+      <th ng-repeat="table in columns" ng-if="table.title">
+        <span class="agg-table-table-header">{{ table.title }}</span>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td ng-repeat="table in columns">
+        <kbn-agg-table-group ng-if="table.tables" group="table"></kbn-agg-table-group>
+        <kbn-agg-table ng-if="table.rows" table="table"></kbn-agg-table>
+      </td>
+    </tr>
+  </tbody>
 </table>
