apply kibana tooltip to tilemap

--- a/desktop/src/kibana/components/vislib/styles/main.less
+++ b/desktop/src/kibana/components/vislib/styles/main.less
@@ -409,7 +409,58 @@ p.rows-label, p.columns-label {
   display: none;
 }
 
+
+/* tile maps */
 .tilemap {
   margin: 0 0 6px 0;
   border: 1px solid #ddd;
 }
+
+#map {
+  width: 800px;
+  height: 500px;
+}
+
+.map-info {
+  padding: 3px 7px 3px 7px;
+  margin: 0;
+  font: 11px/13px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.92);
+  box-shadow: 0 0 12px rgba(0,0,0,0.3);
+  border-radius: 5px;
+}
+
+.map-info h2 {
+  font-size: 12px !important;
+  margin: 0 !important;
+  padding: 0;
+  color: #444;
+}
+
+.map-legend {
+  padding: 5px 7px 5px 7px;
+  margin: 0;
+  font: 11px/13px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.92);
+  box-shadow: 0 0 12px rgba(0,0,0,0.3);
+  border-radius: 5px;
+  text-align: left;
+  line-height: 15px;
+  color: #666;
+}
+
+.map-legend i {
+  width: 10px;
+  height: 10px;
+  float: left;
+  margin: 2px 4px 0 0;
+  opacity: 1;
+  border-radius: 50%;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #999;
+  background: #aaa;
+}
+
