--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -398,6 +398,10 @@ input[type="checkbox"],
   }
 }
 
+textarea {
+  resize: vertical;
+}
+
 .field-collapse-toggle {
   color: #999;
   margin-left: 10px !important;
