--- a/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
@@ -71,13 +71,20 @@
       background-color: @body-bg;
       border-right-color: @sidebar-bg;
     }
+
     .sidebar-item-title {
       background: @sidebar-bg;
     }
+
     .sidebar-item-title:hover {
       color: @sidebar-header-color !important;
       background-color: @sidebar-bg !important;
     }
+  }
+
+  .visualization-options {
+    padding: @vis-editor-agg-editor-spacing;
+    padding-left: @vis-editor-agg-editor-spacing * 4;
   }
 
   nesting-indicator {
