--- a/desktop/src/kibana/components/agg_table/agg_table_group.html
+++ b/desktop/src/kibana/components/agg_table/agg_table_group.html
@@ -2,7 +2,7 @@
   <thead ng-repeat-start="table in rows">
     <tr>
       <th ng-if="table.tables">
-        <span class="agg-table-table-header">{{ table.title }}</span>
+        <span class="agg-table-group-header">{{ table.title }}</span>
       </th>
     </tr>
   </thead>
@@ -20,7 +20,7 @@
   <thead>
     <tr>
       <th ng-repeat="table in columns" ng-if="table.tables">
-        <span class="agg-table-table-header">{{ table.title }}</span>
+        <span class="agg-table-group-header">{{ table.title }}</span>
       </th>
     </tr>
   </thead>
