[paginate] added pageSize control, and pushing new pageSize up to parent scope

--- a/desktop/src/kibana/components/agg_table/agg_table.html
+++ b/desktop/src/kibana/components/agg_table/agg_table.html
@@ -2,7 +2,7 @@
   ng-if="formattedRows.length"
 
   list="formattedRows"
-  per-page="aggTable.getPerPage()"
+  per-page-prop="perPage"
 
   class="agg-table">
   <div class="agg-table-paginated">
