--- a/desktop/src/kibana/partials/paginate_controls.html
+++ b/desktop/src/kibana/partials/paginate_controls.html
@@ -1,30 +1,33 @@
-<ul class="pagination pagination-sm">
-  <li ng-class="{disabled: page.first}">
-    <a ng-click="paginate.goToPage(page.prev)">«</a>
-  </li>
+<div class="pagination-other-pages">
+  <ul class="pagination-other-pages-list pagination-sm" ng-if="page.count > 1">
+    <li ng-class="{disabled: page.first}">
+      <a ng-click="paginate.goToPage(page.prev)">«</a>
+    </li>
 
-  <li ng-if="!otherPages.containsFirst">
-    <a ng-click="paginate.goToPage(1)">1...</a>
-  </li>
+    <li ng-if="!otherPages.containsFirst">
+      <a ng-click="paginate.goToPage(1)">1...</a>
+    </li>
 
-  <li
-    ng-repeat="other in otherPages"
-    ng-class="{ active: other.number === page.number }">
-    <a ng-click="paginate.goToPage(other)">{{other.number}}</a>
-  </li>
+    <li
+      ng-repeat="other in otherPages"
+      ng-class="{ active: other.number === page.number }">
+      <a ng-click="paginate.goToPage(other)">{{other.number}}</a>
+    </li>
 
-  <li ng-if="!otherPages.containsLast">
-    <a ng-click="paginate.goToPage(page.count)">...{{page.count}}</a>
-  </li>
+    <li ng-if="!otherPages.containsLast">
+      <a ng-click="paginate.goToPage(page.count)">...{{page.count}}</a>
+    </li>
 
-  <li ng-class="{disabled: page.last}">
-    <a ng-click="paginate.goToPage(page.next)">»</a>
-  </li>
-</ul>
+    <li ng-class="{disabled: page.last}">
+      <a ng-click="paginate.goToPage(page.next)">»</a>
+    </li>
+  </ul>
+</div>
 
 <form class="form-inline pagination-size">
   <div class="form-group">
     <label>Page Size</label>
-    <input type="number" ng-model="paginate.perPage">
+    <select ng-model="paginate.perPage" ng-options="opt.value as opt.title for opt in paginate.sizeOptions">
+    </select>
   </div>
 </form>
