[tableVis] set the page size from the VisParams

--- a/desktop/src/kibana/components/agg_table/agg_table.html
+++ b/desktop/src/kibana/components/agg_table/agg_table.html
@@ -25,7 +25,7 @@
           </th>
         </tr>
       </thead>
-      <tbody kbn-rows="page" kbn-rows-min="aggTable.getPerPage()"></tbody>
+      <tbody kbn-rows="page" kbn-rows-min="perPage"></tbody>
     </table>
   </div>
 
