Tweak vis option styling, make section collapsed by default

--- a/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
@@ -84,7 +84,10 @@
 
   .visualization-options {
     padding: @vis-editor-agg-editor-spacing;
-    padding-left: @vis-editor-agg-editor-spacing * 4;
+
+    .form-group {
+      margin-bottom: 5px;
+    }
   }
 
   nesting-indicator {
