[spy] scroll the content, not the toggle

--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -76,9 +76,13 @@ visualize-spy {
     .display(flex);
     .flex-direction(column);
 
-    height: 382px;
+    height: 482px;
     padding: 10px 10px 0;
     overflow-y: auto;
+
+    header {
+      padding: 0 0 15px;
+    }
 
     > .alert {
       .flex(0 0 auto);
