--- a/desktop/src/kibana/components/vislib/styles/_tilemap.less
+++ b/desktop/src/kibana/components/vislib/styles/_tilemap.less
@@ -41,7 +41,7 @@
 .tilemap-info {
   padding: 3px 7px 3px 7px;
   margin: 0;
-  font-size: 11px;
+  font-size: 12px;
   background: white;
   background: rgba(255,255,255,0.92);
   box-shadow: 0 0 12px rgba(0,0,0,0.3);
@@ -57,6 +57,11 @@
 
 
 /* over-rides leaflet popup styles to look like kibana tooltip */
+
+.leaflet-container {
+  background: #fff !important;
+  outline: 0 !important;
+}
 
 .leaflet-popup-content-wrapper {
   margin: 0;
@@ -84,3 +89,15 @@
   display: none !important;
 }
 
+.leaflet-control-layers-expanded {
+  padding: 0;
+  margin: 0;
+  font: 12px/13px Arial, Helvetica, sans-serif;
+  line-height: 14px !important;
+}
+
+.leaflet-control-layers-expanded label {
+  font-weight: normal !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
