changes to styles for better legibility with mapquest tiles

--- a/desktop/src/kibana/components/vislib/styles/_tilemap.less
+++ b/desktop/src/kibana/components/vislib/styles/_tilemap.less
@@ -5,6 +5,10 @@
 .tilemap {
   margin: 0 0 6px 0;
   border: 1px solid #ddd;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 /* leaflet Dom Util div for map label */
