[vislib/tileMap] remove absolute styling

--- a/desktop/src/kibana/components/vislib/styles/_tilemap.less
+++ b/desktop/src/kibana/components/vislib/styles/_tilemap.less
@@ -3,12 +3,9 @@
 /* _tilemap */
 
 .tilemap {
-  margin: 0 0 6px 0;
-  border: 1px solid #ddd;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+  margin-bottom: 6px;
+  border: 1px solid #DDD;
+  position: relative;
 }
 
 /* leaflet Dom Util div for map label */
