--- a/desktop/src/kibana/partials/paginate_controls.html
+++ b/desktop/src/kibana/partials/paginate_controls.html
@@ -24,7 +24,7 @@
   </ul>
 </div>
 
-<form class="form-inline pagination-size">
+<form class="form-inline pagination-size" ng-if="showSelector">
   <div class="form-group">
     <label>Page Size</label>
     <select ng-model="paginate.perPage" ng-options="opt.value as opt.title for opt in paginate.sizeOptions">
