In visualization creation, make the icons the same width for consistency

--- a/desktop/src/kibana/plugins/visualize/styles/main.less
+++ b/desktop/src/kibana/plugins/visualize/styles/main.less
@@ -13,6 +13,7 @@
 .visualizations .visualization i {
   margin-right: @padding-base-horizontal;
   font-size: 1.5em;
+  width: 1em;
 }
 
 .visualizations {
