--- a/desktop/src/kibana/plugins/table_vis/table_vis.less
+++ b/desktop/src/kibana/plugins/table_vis/table_vis.less
@@ -1,17 +1,30 @@
 @import (reference) "lesshat.less";
 
-.TableVis {
-  width: 100%;
+.table-vis {
+  .display(flex);
+  .flex-direction(column);
+  .flex(1 0 100%);
 
-  kbn-agg-table-group > .table > tbody > tr > td {
-    border-top: 0px;
+  &-error {
+    .display(flex);
+    .flex-direction(column);
+    .justify-content(center);
+    .flex(1 0 100%);
+
+    text-align: center;
   }
 
-  .pagination-other-pages {
-    .justify-content(flex-end);
-  }
+  &-container {
+    kbn-agg-table-group > .table > tbody > tr > td {
+      border-top: 0px;
+    }
 
-  .pagination-size {
-    display: none;
+    .pagination-other-pages {
+      .justify-content(flex-end);
+    }
+
+    .pagination-size {
+      display: none;
+    }
   }
 }
