add disabled value to scope, hide directive if flash failed

--- a/desktop/src/kibana/components/clipboard/clipboard.html
+++ b/desktop/src/kibana/components/clipboard/clipboard.html
@@ -1,4 +1,4 @@
-<span>
+<span ng-if="!disabled">
   <a tooltip="{{shownText}}"
     tooltip-placement="{{tipPlacement}}"
     tooltip-animation="false"
