--- a/desktop/src/kibana/plugins/dashboard/partials/share.html
+++ b/desktop/src/kibana/plugins/dashboard/partials/share.html
@@ -2,15 +2,22 @@
 
   <p>
     <div class="input-group">
-      <label>Embed this dashboard. <kbn-clipboard copy="opts.shareData().embed"></kbn-clipboard> <small>Add to your html source. Note all clients must still be able to access kibana</small></label>
+      <label>
+        Embed this dashboard.
+        <kbn-clipboard copy="opts.shareData().embed"></kbn-clipboard>
+        <small>Add to your html source. Note all clients must still be able to access kibana</small>
+      </label>
       <div class="form-control" disabled>{{opts.shareData().embed}}</div>
     </div>
   </p>
 
   <p>
     <div class="input-group">
-      <label>Share a link <kbn-clipboard copy="opts.shareData().link"></kbn-clipboard></i></a></label>
-    	<div class="form-control" disabled>{{opts.shareData().link}}</div>
+      <label>
+        Share a link
+        <kbn-clipboard copy="opts.shareData().link"></kbn-clipboard>
+      </label>
+      <div class="form-control" disabled>{{opts.shareData().link}}</div>
     </div>
   </p>
 </form>
