disable the internal container instead of the whole directive

--- a/desktop/src/kibana/components/clipboard/clipboard.html
+++ b/desktop/src/kibana/components/clipboard/clipboard.html
@@ -1,5 +1,7 @@
-<span ng-if="!disabled">
-  <a tooltip="{{shownText}}"
+<span>
+  <a
+    ng-if="!disabled"
+    tooltip="{{shownText}}"
     tooltip-placement="{{tipPlacement}}"
     tooltip-animation="false"
     tooltip-popup-delay="0"
