Revert "Merge pull request #1876 from w33ble/clipboard"
This reverts commit 67f3fe9600cb07a11e96ddbb4e3b895318b20c35, reversing
changes made to 1b3a38523251cdfdbe335cf016c39c55556efee1.

--- a/desktop/src/kibana/components/clipboard/clipboard.html
+++ b/desktop/src/kibana/components/clipboard/clipboard.html
@@ -1,7 +1,5 @@
 <span>
-  <a
-    ng-if="!disabled"
-    tooltip="{{shownText}}"
+  <a tooltip="{{shownText}}"
     tooltip-placement="{{tipPlacement}}"
     tooltip-animation="false"
     tooltip-popup-delay="0"
