Revert "Revert "Merge pull request #1876 from w33ble/clipboard""
This reverts commit ff1f3da1feccf05e66bdcd6a187196ca1bc3b876.

--- a/desktop/src/kibana/components/clipboard/clipboard.html
+++ b/desktop/src/kibana/components/clipboard/clipboard.html
@@ -1,5 +1,7 @@
 <span>
-  <a tooltip="{{shownText}}"
+  <a
+    ng-if="!disabled"
+    tooltip="{{shownText}}"
     tooltip-placement="{{tipPlacement}}"
     tooltip-animation="false"
     tooltip-popup-delay="0"
