[tableVis] allow displaying partial rows, fixes #1911

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -117,6 +117,10 @@ ul.navbar-inline li {
   bottom:0px;
 }
 
+.checkbox input[type="checkbox"] {
+  float: none;
+}
+
 notifications {
   z-index: 1;
 }
