Make changes as per Spencer's suggestions

--- a/desktop/src/kibana/plugins/metric_vis/metric_vis.less
+++ b/desktop/src/kibana/plugins/metric_vis/metric_vis.less
@@ -1,8 +1,8 @@
-.MetricVis {
+.metric-vis {
   width: 100%;
   text-align: center;
 
-  .MetricValue {
+  .metric-value {
     font-size: 5em;
     font-weight: bold;
     white-space: nowrap;
