Prettify the display of the _source field in discover

--- a/desktop/src/kibana/styles/_table.less
+++ b/desktop/src/kibana/styles/_table.less
@@ -20,4 +20,21 @@ kbn-table,tbody[kbn-rows] {
     text-align: right;
     padding-right: 15px;
   }
+
+  .source {
+    line-height: 1.8em;
+
+    .source-field {
+      background: lightgray;
+      padding: 0.15em 0.2em 0.15em 0.7em;
+      font-weight: bold;
+      margin: 0 0 0 5px;
+      color: dimgray;
+      font-size: 0.85em;
+    }
+
+    .source-value {
+      padding: 0 5px;
+    }
+  }
 }
