[discover/tableRow] style opinions

--- a/desktop/src/kibana/plugins/discover/partials/table_row/_source.html
+++ b/desktop/src/kibana/plugins/discover/partials/table_row/_source.html
@@ -1,4 +1,4 @@
-<div class="source">
+<div class="source truncate-by-height">
     <% _.each(source, function (value, field) { %>
         <span class="source-field"><%- field %>:</span>
         <span class="source-value"><%- value %></span>
