[discover/tableRow] add a single space between pairs, update styles accordingly

--- a/desktop/src/kibana/styles/_table.less
+++ b/desktop/src/kibana/styles/_table.less
@@ -29,18 +29,15 @@ kbn-table,tbody[kbn-rows] {
       display: inline;
       background: #ECECEC;
       padding: 0.15em 0.2em 0.15em 0.7em;
-      margin: 0 0.3em 0 1.5em;
+      margin-right: 0.3em;
       font-weight: bold;
       color: #5F5F5F;
       font-family: monospace;
     }
 
-    dt:first-child {
-      margin-left: 0;
-    }
-
     dd {
       display: inline;
+      margin-right: 0.75em;
     }
   }
 }
