[kibana] read and expose the timefilter properly

--- a/desktop/src/kibana/components/timepicker/timepicker.html
+++ b/desktop/src/kibana/components/timepicker/timepicker.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="kbn-timepicker-section">
-              <label>&nbsp</label><br>
+              <label>&nbsp;</label><br>
               <div class="form-group">
                 <button
                   type="submit"
