Use standard theme lighter gray for table field names

--- a/desktop/src/kibana/styles/_table.less
+++ b/desktop/src/kibana/styles/_table.less
@@ -25,7 +25,7 @@ kbn-table,tbody[kbn-rows] {
     line-height: 1.8em;
 
     .source-field {
-      background: lightgray;
+      background: @gray-lighter;
       padding: 0.15em 0.2em 0.15em 0.7em;
       font-weight: bold;
       margin: 0 0 0 5px;
