Add highlighting inside Discover

--- a/desktop/src/kibana/plugins/discover/partials/table_row/_source.html
+++ b/desktop/src/kibana/plugins/discover/partials/table_row/_source.html
@@ -1,5 +1,11 @@
 <dl class="source truncate-by-height">
+  <% _.each(highlight, function (value, field) { /* show fields that match the query first */ %>
+    <dt><%= field %>:</dt>
+    <dd><%= source[field] %></dd>
+    <%= ' ' %>
+  <% }); %>
   <% _.each(source, function (value, field) { %>
+    <% if (_.has(highlight, field)) return; %>
     <dt><%= field %>:</dt>
     <dd><%= value %></dd>
     <%= ' ' %>
