--- a/desktop/src/kibana/plugins/discover/partials/table_row/details.html
+++ b/desktop/src/kibana/plugins/discover/partials/table_row/details.html
@@ -33,7 +33,7 @@
               tooltip-placement="top"
               tooltip="Objects in arrays are not well supported."
               class="fa fa-warning text-color-warning ng-scope"></i>
-            <span class="discover-table-details-value">{{row._formatted[field] || row[field]}}</span>
+            <span class="discover-table-details-value" ng-bind-html="(row._formatted[field] || row[field]) | highlight : row.highlight[field] | trustAsHtml"></span>
           </td>
         </tr>
       </tbody>
