[visualize] fix the visualize apps canvas when the app is 'embeded'

--- a/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
@@ -228,6 +228,11 @@
     .flex-direction(column);
     overflow: auto;
 
+    &.embeded {
+      .flex-shrink(1);
+      .flex-basis(100%);
+    }
+
     // overrided for tablet and desktop
     @media (min-width: @screen-md-min) {
       .flex-shrink(1);
