--- a/desktop/src/kibana/components/paginated_table/paginated_table.html
+++ b/desktop/src/kibana/components/paginated_table/paginated_table.html
@@ -1,24 +1,8 @@
-<!--
-USAGE
-
-<paginated-table
-  rows="table.rows"
-  columns="table.cols"
-    { title: 'whatever', class: 'optional list of classes', }
-  per-page="10"
-  sort-handler="someHandler"
-  show-selector="true (optional)">
-</paginated-table>
--->
-
 <paginate
   ng-if="rows.length"
   list="rows"
-  per-page="paginatedTable.perPage"
-  per-page-prop="paginatedTable.perPageProp"
+  per-page-prop="perPage"
   class="agg-table">
-  <h2 ng-if="sortHandler">Handler perPage:{{ perPage }} / perPageProp:{{ perPageProp }}</h2>
-  <h2 ng-if="!sortHandler">No Handler perPage:{{ perPage }} / perPageProp:{{ perPageProp }}</h2>
   <div class="agg-table-paginated">
     <table class="table table-condensed">
       <thead>
@@ -30,7 +14,6 @@ USAGE
             <span bo-text="col.title"></span>
             <i
               class="fa"
-              ng-if="sortHandler"
               ng-class="{
                 'fa-sort-asc': paginatedTable.sort.columnName === col.title && paginatedTable.sort.direction === 'asc',
                 'fa-sort-desc': paginatedTable.sort.columnName === col.title && !paginatedTable.sort.direction === 'asc',
