--- a/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
+++ b/desktop/src/kibana/plugins/visualize/editor/styles/editor.less
@@ -228,7 +228,7 @@
     .flex-direction(column);
     overflow: auto;
 
-    &.embeded {
+    &.embedded {
       .flex-shrink(1);
       .flex-basis(100%);
     }
