leave sorting up to the parginated table, but allow custom sorter if needed

--- a/desktop/src/kibana/components/agg_table/agg_table.html
+++ b/desktop/src/kibana/components/agg_table/agg_table.html
@@ -2,8 +2,7 @@
   ng-if="formattedRows.length"
   rows="formattedRows"
   columns="table.columns"
-  per-page="perPage"
-  sort-handler="aggTable.cycleSort">
+  per-page="perPage">
 
   <div class="agg-table-controls">
     <a class="small" ng-click="aggTable.exportAsCsv()">
