format agg columns, pass to paginated table

--- a/desktop/src/kibana/components/agg_table/agg_table.html
+++ b/desktop/src/kibana/components/agg_table/agg_table.html
@@ -1,7 +1,7 @@
 <paginated-table
   ng-if="formattedRows.length"
   rows="formattedRows"
-  columns="table.columns"
+  columns="formattedColumns"
   per-page="perPage">
 
   <div class="agg-table-controls">
