fix the name field width so the table feels more constant

--- a/desktop/src/kibana/plugins/settings/styles/main.less
+++ b/desktop/src/kibana/plugins/settings/styles/main.less
@@ -129,6 +129,13 @@ kbn-settings-objects-view {
   }
 }
 
+kbn-settings-indices .fields {
+  & th:first-child,
+  & td:first-child {
+    width: 35%;
+  }
+}
+
 .kbn-settings-indices-create {
   .time-and-pattern > div {}
 }
