--- a/desktop/src/kibana/components/agg_types/controls/field.html
+++ b/desktop/src/kibana/components/agg_types/controls/field.html
@@ -8,7 +8,7 @@
     required
     ng-model="params.field"
     ng-options="
-      field as field.name group by field.type for field in aggConfig.vis.indexPattern.fields.raw
+      field as field.displayName group by field.type for field in aggConfig.vis.indexPattern.fields.raw
       | fieldType: aggParam.filterFieldTypes
       | filter: { indexed: true }
       | orderBy: ['type', 'name']
