--- a/desktop/src/kibana/plugins/discover/partials/table_header.html
+++ b/desktop/src/kibana/plugins/discover/partials/table_header.html
@@ -4,7 +4,7 @@
 </th>
 <th ng-repeat="name in columns">
   <span ng-click="sort(name)" class="table-header-name">
-    {{name | shortDotsFilter}} <i ng-class="headerClass(name)"></i>
+    {{name | shortDots}} <i ng-class="headerClass(name)"></i>
   </span>
   <span class="table-header-move">
     <i ng-click="moveLeft(name)" class="fa fa-angle-double-left" ng-show="!$first"></i>
