--- a/desktop/src/kibana/plugins/settings/styles/main.less
+++ b/desktop/src/kibana/plugins/settings/styles/main.less
@@ -136,6 +136,14 @@ kbn-settings-indices .fields {
   }
 }
 
+kbn-settings-indices .scripted-fields {
+  & header {
+    margin: 5px 0;
+    text-align: right;
+  }
+}
+
+
 .kbn-settings-indices-create {
   .time-and-pattern > div {}
 }
